FIX: fixes misaligned "Collections" button

--- a/assets/css/rtl-style.css
+++ b/assets/css/rtl-style.css
@@ -219,15 +219,6 @@ html {
   font-weight: normal;
   font-style: normal; }
 
-/* line 1, /Users/M8M/Sites/platform-pattern-library/assets/sass/utils/font-awesome/_core.scss */
-.fa {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
-
 /* makes the font 33% larger relative to the icon container */
 /* line 5, /Users/M8M/Sites/platform-pattern-library/assets/sass/utils/font-awesome/_larger.scss */
 .fa-lg {
@@ -4556,12 +4547,12 @@ span.date {
   .actions-toggle .actions-content > .custom-fieldset {
     display: block; }
   /* line 30, /Users/M8M/Sites/platform-pattern-library/assets/sass/2_fragments/_actions.scss */
-  .actions-toggle .actions-content > a, .actions-toggle .actions-content > .button-link, .actions-toggle .actions-content > button, .actions-toggle .actions-content > .custom-fieldset.init {
+  .actions-toggle .actions-content > a, .actions-toggle .actions-content > .button-link, .actions-toggle .actions-content > button, .actions-toggle .actions-content .custom-fieldset.init {
     display: inline-block;
     vertical-align: top;
     margin: 10px 5px 10px 0; }
     /* line 35, /Users/M8M/Sites/platform-pattern-library/assets/sass/2_fragments/_actions.scss */
-    .actions-toggle .actions-content > a:last-child, .actions-toggle .actions-content > .button-link:last-child, .actions-toggle .actions-content > button:last-child, .actions-toggle .actions-content > .custom-fieldset.init:last-child {
+    .actions-toggle .actions-content > a:last-child, .actions-toggle .actions-content > .button-link:last-child, .actions-toggle .actions-content > button:last-child, .actions-toggle .actions-content .custom-fieldset.init:last-child {
       margin-right: 0; }
 
 /* line 44, /Users/M8M/Sites/platform-pattern-library/assets/sass/2_fragments/_actions.scss */
