--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4554,12 +4554,12 @@ span.date {
   .actions-toggle .actions-content > .custom-fieldset {
     display: block; }
   /* line 30, /Users/M8M/Sites/platform-pattern-library/assets/sass/2_fragments/_actions.scss */
-  .actions-toggle .actions-content > a, .actions-toggle .actions-content > .button-link, .actions-toggle .actions-content > button, .actions-toggle .actions-content > .custom-fieldset.init {
+  .actions-toggle .actions-content > a, .actions-toggle .actions-content > .button-link, .actions-toggle .actions-content > button, .actions-toggle .actions-content .custom-fieldset.init {
     display: inline-block;
     vertical-align: top;
     margin: 10px 5px 10px 0; }
     /* line 35, /Users/M8M/Sites/platform-pattern-library/assets/sass/2_fragments/_actions.scss */
-    .actions-toggle .actions-content > a:last-child, .actions-toggle .actions-content > .button-link:last-child, .actions-toggle .actions-content > button:last-child, .actions-toggle .actions-content > .custom-fieldset.init:last-child {
+    .actions-toggle .actions-content > a:last-child, .actions-toggle .actions-content > .button-link:last-child, .actions-toggle .actions-content > button:last-child, .actions-toggle .actions-content .custom-fieldset.init:last-child {
       margin-right: 0; }
 
 /* line 44, /Users/M8M/Sites/platform-pattern-library/assets/sass/2_fragments/_actions.scss */
