--- a/assets/sass/2_fragments/_actions.scss
+++ b/assets/sass/2_fragments/_actions.scss
@@ -27,7 +27,7 @@
 
         > a,
         > button,
-        > .custom-fieldset.init {
+        .custom-fieldset.init {
             display: inline-block;
             vertical-align: top;
             margin: $sm-spacing $tiny-spacing $sm-spacing 0;
